--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,13 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
+
+html,
+body,
+:root {
+  height: 100%;
+}
 
 @theme inline {
   --color-background: var(--background);
